--- a/radar2camera/manual_calib/CMakeLists.txt
+++ b/radar2camera/manual_calib/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(RadarToCamera)
-set(CMAKE_CXX_FLAGS "-std=c++11 -g -Wall")
+# set(CMAKE_CXX_FLAGS "-std=c++11 -g -Wall")
+set(CMAKE_CXX_STANDARD 17)
 
 find_package(Pangolin REQUIRED)
 include_directories(${Pangolin_INCLUDE_DIRS})
@@ -11,7 +12,7 @@ include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${OpenCV_LIBRARY_DIRS})
 
 find_package(Boost REQUIRED system)
-find_package(OpenCV REQUIRED)
+find_package(OpenCV 3 REQUIRED)
 
 include_directories(${OpenCV_INCLUDE_DIRS})
 include_directories(${EIGEN_ROOT})
